find_package(Threads REQUIRED)
find_package(GTest CONFIG REQUIRED)

enable_testing()

add_subdirectory(1845)
add_subdirectory(12906)
add_subdirectory(12909)
add_subdirectory(42576)
add_subdirectory(42577)
add_subdirectory(42578)
add_subdirectory(42579)
add_subdirectory(42583)
add_subdirectory(42584)
add_subdirectory(42586)
add_subdirectory(42587)
add_subdirectory(42626)
add_subdirectory(42627)
add_subdirectory(42628)
add_subdirectory(42746)
add_subdirectory(42747)
add_subdirectory(42748)
add_subdirectory(42839)
add_subdirectory(42840)
